--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
+    "@testing-library/react-hooks": "^3.2.1",
     "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^25.2.1",
     "antd": "^4.1.4",
     "classnames": "^2.2.6",
     "memoize-one": "^5.1.1",
@@ -25,7 +27,8 @@
     "babel-plugin-import": "^1.13.0",
     "customize-cra": "^0.9.1",
     "node-sass": "^4.14.0",
-    "react-app-rewired": "^2.1.5"
+    "react-app-rewired": "^2.1.5",
+    "react-test-renderer": "^16.13.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
